--- a/public/index.html
+++ b/public/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>PromptGenius - Your Exam Question Companion</title>
+    <title>PromptGenie - Your Exam Question Companion</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.4/dist/tailwind.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="bg-gradient-to-r from-indigo-500 to-blue-500">
     <nav class="flex items-center justify-between flex-wrap bg-transparent p-6">
         <div class="flex items-center flex-shrink-0 text-white mr-6">
-        <img src="./assets/pgv1tp.png" alt="PromptGenius Logo" class="h-32 w-auto">
-          <span class="font-semibold text-xl tracking-tight">PromptGenius</span>
+        <img src="./assets/pgv1tp.png" alt="PromptGenie Logo" class="h-32 w-auto">
+          <span class="font-semibold text-xl tracking-tight">PromptGenie</span>
         </div>
         <div class="block lg:hidden">
           <button class="flex items-center px-3 py-2 border rounded text-gray-500 border-gray-500 hover:text-white hover:border-white">
@@ -45,10 +45,14 @@
                     </button>
                 </div>
             </form>
-            <div id="question-container" class="mt-8"></div>
+            <div id="question-container" class="mt-8">
+                <div id="loader" class="fixed top-0 left-0 w-full h-full bg-gray-300 opacity-0 z-50 transition-opacity duration-300 flex justify-center items-center">
+                    <div class="loader"></div>
+                  </div>
+            </div>
         </div>
     </main>
 
-    <script src="../index.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
