--- a/public/index.html
+++ b/public/index.html
@@ -29,12 +29,30 @@
                 <div class="flex items-center border-b border-b-2 border-white py-2">
                     <select id="prompt" name="prompt" class="appearance-none bg-transparent border-none w-full text-gray-700 mr-3 py-1 px-2 leading-tight focus:outline-none">
                         <option value="">Select a Prompt</option>
-                        <optgroup label="Edexcel AS Economics A: Introduction to Markets and Market Failure"></optgroup>
+                        <optgroup label="Edexcel Economics A: Introduction to Markets and Market Failure"></optgroup>
                         <option value="1">The Economic Problem</option>
-                        <option value="2">Allocation of Resources</option>
-                        <option value="3">Elasticity</option>
-                        <option value="4">Market Failure and Government Intervention</option>
-                        <optgroup label="Edexcel AS Economics A: The UK Economy - Performance and Policies"></optgroup>
+                        <option value="1">Allocation of Resources</option>
+                        <option value ="1">Demand
+                        <option value="1">Supply</option>
+                        <option value="1">Elasticity</option>
+                        <option value="1"> Market Equilibrium</option>
+                        <option value="1">Indirect Taxes and Subsidies</option>
+                        <option value="1">Price Controls: Minimum and Maximum Prices</option>
+                        <option value="1">Market Failure and Externalities</option>   
+                        <option value="1">Public Goods and Quasi-Public Goods</option>
+                        <option value="1"> Common access resources</option>
+                        <option value="1">Information asymmetry and market failure</option>
+                        <optgroup label="Edexcel Economics A: The UK Economy - Performance and Policies"></optgroup>
+                        <option value="2">Measures of Economic Performance</option>
+                        <option value="2">Aggregate Demand</option>
+                        <option value="2">Aggregate Supply</option>
+                        <option value="2">National Income and Economic Welfare</option>
+                        <option value="2">Economic Growth</option>
+                        <option value="2">Inflation</option>
+                        <option value="2">Unemployment</option>
+                        <option value="2">Balance of Payments</option>
+                        <option value="2">Macroeconomic Objectives and Policy</option>
+                        <option value="2">International Trade</option>
                         <optgroup label="AQA AS History: Tsarist Russia, 1855-1917"></optgroup>
                         <optgroup label="AQA AS History: The English Revolution, 1625-1642"></optgroup>
                         <optgroup label="Edexcel AS Government and Politics: UK Government"></optgroup>
