--- a/public/gen.html
+++ b/public/gen.html
@@ -29,7 +29,7 @@
                 <div class="flex items-center border-b border-b-2 border-white py-2">
                     <select id="prompt" name="prompt" class="appearance-none bg-transparent border-none w-full text-gray-700 mr-3 py-1 px-2 leading-tight focus:outline-none">
                         <option value="">Select a Prompt</option>
-                        <optgroup label="Edexcel Economics A: Introduction to Markets and Market Failure"></optgroup>
+                        <optgroup label="A Level Edexcel Economics A: Introduction to Markets and Market Failure"></optgroup>
                         <option value="1">The Economic Problem</option>
                         <option value="1">Allocation of Resources</option>
                         <option value ="1">Demand
@@ -42,7 +42,7 @@
                         <option value="1">Public Goods and Quasi-Public Goods</option>
                         <option value="1"> Common access resources</option>
                         <option value="1">Information asymmetry and market failure</option>
-                        <optgroup label="Edexcel Economics A: The UK Economy - Performance and Policies"></optgroup>
+                        <optgroup label="Edexcel A Level Economics A: The UK Economy - Performance and Policies"></optgroup>
                         <option value="2">Measures of Economic Performance</option>
                         <option value="2">Aggregate Demand</option>
                         <option value="2">Aggregate Supply</option>
@@ -52,11 +52,39 @@
                         <option value="2">Unemployment</option>
                         <option value="2">Balance of Payments</option>
                         <option value="2">Macroeconomic Objectives and Policy</option>
-                        <option value="2">International Trade</option>
-                        <optgroup label="AQA AS History: Tsarist Russia, 1855-1917"></optgroup>
-                        <optgroup label="AQA AS History: The English Revolution, 1625-1642"></optgroup>
-                        <optgroup label="Edexcel AS Government and Politics: UK Government"></optgroup>
-                        <optgroup label="Edexcel AS Government and Politics: UK Politics"></optgroup>
+                        <option value="2">Conflicts and Trade Offs</option>
+                        <optgroup label="AQA A Level History: Tsarist and Communist Russia, 1855-1964"></optgroup>
+                        <option value="3">Political, Social and Economic Condition of Russia in 1855</option>
+                        <option value="3">The Impact of the Crimean War</option>
+                        <option value="3">The Emancipation of he Serfs</option>
+                        <option value="3">Alexander II and III as rulers</option>
+                        <option value="3">Russification & Treatment of Ethnic Minorities</option>
+                        <option value="3">Opposition: Liberals, Radicals and the Tsarist Reaction</option>
+                        <option value="3">Industrial Developments and the Land Issue</option>
+                        <option value="3">Nicholas II as ruler</option>
+                        <option value="3">1905 Revolution</option>
+                        <option value="3">Duma Government</option>
+                        <option value="3">Economic and Social Developments up to 1914</option>
+                        <option value="3">Marxism, Socialism and Liberalism</option>
+                        <option value="3">Political, Economic and Social Problems of Wartime</option>
+                        <option value="3">The Collapse of Autocracy</option>
+                        <option value="3">The Provisional Government</option>
+                        <option value="3">The Bolsheviks</option>
+                        <optgroup label="AQA A Level History: The English Revolution, 1625-1642"></optgroup>
+                        <option value="4">The Legacy of James I</option>
+                        <option value="4">Monarchy and Divine Right</option>
+                        <option value="4">Challenges to the arbitrary government of Charles I</option>
+                        <option value="4">Parlimentary Radicalism</option>
+                        <option value="4">Charles I's Personal Rule</option>
+                        <option value="4">Religious Issues</option>
+                        <option value="4">Political Issues</option>
+                        <option value="4">Radicalism, dissent and the approach of war</option>
+                        <option value="4">The Political Nation, 1640</option>
+                        <option value="4"> John Pym and the spread of parliamentary radicalism</option>
+                        <option value="4">Conflicts between the Crown and Parliament</option>
+                        <option value="4">The "slide" into war</option>
+                        <optgroup label="Edexcel A Level Government and Politics: UK Government"></optgroup>
+                        <optgroup label="Edexcel A Level Government and Politics: UK Politics"></optgroup>
                     </select>
                     <button id="generate-btn" class="flex-shrink-0 bg-white hover:bg-gray-300 border-white hover:border-gray-300 text-indigo-500 hover:text-white border-4 text-sm font-bold py-1 px-2 rounded" type="button">
                         Generate Question
