--- a/public/index.html
+++ b/public/index.html
@@ -150,27 +150,73 @@
           <p class="text-gray-600">There is no limit to the number of questions you can generate with QGenie.</p>
         </div>
       </div>
-      <!-- Footer -->
-        <div class="mt-16">
-            <div class="flex flex-col md:flex-row">
-            <div class="flex-1 mb-8 md:mb-0 md:mr-8">
-                <h3 class="text-xl font-bold text-gray-800 mb-4">QGenie</h3>
-                <p class="text-gray-600">
-                QGenie is a free tool that can generate exam-style questions across a range of GCSE and A-Level subjects in seconds.
-                </p>
-            </div>
-    
-            <div class="flex-1 mb-8 md:mb-0 md:mr-8">
-                <h3 class="text-xl font-bold text-gray-800 mb-4">Contact</h3>
-                <p class="text-gray-600">
-                <a href="mailto:ceo@aspekts.dev"><i class="fa fa-envelope" aria-hidden="true"></i> Email</a>
-                </p>
-                <p class="text-gray-600">
-                <a href="https://twitter.com/xAspekts"><i class="fab fa-twitter"></i> Twitter</a>
-                </p>
-                <p class="text-gray-600">
-                <a href="https://discord.com/GxGTHBC"><i class="fab fa-discord"></i> Discord</a>
-                </p>
     </div>
+<footer class="relative bg-gray-100 pt-8 pb-6">
+  <div class="container mx-auto px-4">
+    <div class="flex flex-wrap text-left lg:text-left">
+      <div class="w-full lg:w-6/12 px-4">
+        <h4 class="text-3xl fonat-semibold text-gray-800">Let's keep in touch!</h4>
+        <h5 class="text-lg mt-0 mb-2 text-gray-600">
+          Find us on any of these platforms, we respond 1-2 business days.
+        </h5>
+        <div class="mt-6 lg:mb-0 mb-6">
+          <a href="https://twitter.com/xAspekts"><button class="bg-white text-lightBlue-400 shadow-lg font-normal h-10 w-10 items-center justify-center align-center rounded-full outline-none focus:outline-none mr-2" type="button">
+            <i class="fab fa-twitter"></i>
+          </button></a>
+           <a href="https://instagram.com/aspek.ts"> <button class="bg-white text-lightBlue-600 shadow-lg font-normal h-10 w-10 items-center justify-center align-center rounded-full outline-none focus:outline-none mr-2" type="button">
+            <i class="fab fa-instagram"></i>
+          </button></a>
+            <a href="https://discord.com/GxGTHBC"><button class="bg-white shadow-lg font-normal h-10 w-10 items-center justify-center align-center rounded-full outline-none focus:outline-none mr-2" type="button">
+            <i class="fab fa-discord"></i>
+          </button></a>
+           <a href="https://github.com/aspekts"> <button class="bg-white text-blueGray-800 shadow-lg font-normal h-10 w-10 items-center justify-center align-center rounded-full outline-none focus:outline-none mr-2" type="button">
+            <i class="fab fa-github"></i>
+          </button></a>
+        </div>
+      </div>
+      <div class="w-full lg:w-6/12 px-4">
+        <div class="flex flex-wrap items-top mb-6">
+          <div class="w-full lg:w-4/12 px-4 ml-auto">
+            <span class="block uppercase text-blueGray-500 text-sm font-semibold mb-2">Useful Links</span>
+            <ul class="list-unstyled">
+              <li>
+                <a class="text-blueGray-600 hover:text-blueGray-800 font-semibold block pb-2 text-sm" href="https://yarndev.co.uk">Yarn Development</a>
+              </li>
+              <li>
+                <a class="text-blueGray-600 hover:text-blueGray-800 font-semibold block pb-2 text-sm" href="https://aspekts.dev/">Portfolio</a>
+              </li>
+              <li>
+                <a class="text-blueGray-600 hover:text-blueGray-800 font-semibold block pb-2 text-sm" href="https://www.github.com/aspekts">Github</a>
+              </li>
+            </ul>
+          </div>
+          <div class="w-full lg:w-4/12 px-4">
+            <span class="block uppercase text-blueGray-500 text-sm font-semibold mb-2">Other Resources</span>
+            <ul class="list-unstyled">
+              <li>
+                <a class="text-blueGray-600 hover:text-blueGray-800 font-semibold block pb-2 text-sm" href="https://github.com/aspekts/QGenie/blob/master/LICENSE">MIT License</a>
+              </li>
+              <li>
+                <a class="text-blueGray-600 hover:text-blueGray-800 font-semibold block pb-2 text-sm" href="https://yarndev.co.uk/privacy">Privacy Policy</a>
+              </li>
+              <li>
+                <a class="text-blueGray-600 hover:text-blueGray-800 font-semibold block pb-2 text-sm" href="https://aspekts.dev/contact">Contact Us</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <hr class="my-6 border-blueGray-300">
+    <div class="flex flex-wrap items-center md:justify-between justify-center">
+      <div class="w-full md:w-4/12 px-4 mx-auto text-center">
+        <div class="text-sm text-blueGray-500 font-semibold py-1">
+          Copyright © <span id="get-current-year">2023</span><a href="https://aspekts.dev/" class="text-blueGray-500 hover:text-gray-800" target="_blank"> Aspekts, associated with
+          <a href="https://yarndev.co.uk/" class="text-blueGray-500 hover:text-blueGray-800">Yarn Development</a>.
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
   </body>
 </html>
