--- a/public/index.html
+++ b/public/index.html
@@ -157,7 +157,7 @@
       <div class="w-full lg:w-6/12 px-4">
         <h4 class="text-3xl fonat-semibold text-gray-800">Let's keep in touch!</h4>
         <h5 class="text-lg mt-0 mb-2 text-gray-600">
-          Find us on any of these platforms, we respond 1-2 business days.
+          Find us on any of these platforms, we usually respond in 1-2 business days.
         </h5>
         <div class="mt-6 lg:mb-0 mb-6">
           <a href="https://twitter.com/xAspekts"><button class="bg-white text-lightBlue-400 shadow-lg font-normal h-10 w-10 items-center justify-center align-center rounded-full outline-none focus:outline-none mr-2" type="button">
