Add all subjects to opt list

--- a/public/gen.html
+++ b/public/gen.html
@@ -37,6 +37,20 @@
                                     <option value="none">Select a Prompt</option>
                                     <option value="1">A Level Edexcel Economics A: Introduction to Markets and Market Failure</option>
                                     <option value="2">Edexcel A Level Economics A: The UK Economy - Performance and Policies</option>
+                                    <option value="3">AQA A Level History: Tsarist and Communist Russia, 1855-1964</option>
+                                    <option value="4">AQA A Level History: The English Revolution, 1625-1642</option>
+                                    <option value="5">Edexcel A Level Mathematics: Year 1 Stats and Mechanics</option>
+                                    <option value="6">Edexcel A Level Mathematics: Year 1 Pure</option>                                    
+                                    <option value="7">Edexcel A Level Mathematics: Year 2 Pure</option>
+                                    <option value="8">Edexcel A Level Mathematics: Year 2 Stats and Mechanics</option>
+                                    <option value="9">AQA A Level Geography: Physical Geography</option>
+                                    <option value="10">AQA A Level Geography: Human Geography</option>
+                                    <option value="11">Edexcel A Level Government and Politics: UK Government</option>
+                                    <option value="12">Edexcel A Level Government and Politics: UK Politics</option>
+                                    <option value="13">OCR A Level Media Studies: Media Messages</option>
+                                    <option value="14">AQA A Level Biology</option>
+                                    <option value="15">Edexcel A Level Chemistry: Advanced Inorganic and Physical Chemistry</option>
+                                    <option value="16">Edexcel A Level Chemistry: Advanced Organic and Physical Chemistry</option>
                                 </select>
                             </div>
                             <button id="generate-btn" class="flex-shrink-0 bg-white hover:bg-gray-300 border-white hover:border-gray-300 text-indigo-500 hover:text-white border-4 text-sm font-bold py-1 px-2 rounded" type="button">
