--- a/public/gen.html
+++ b/public/gen.html
@@ -25,7 +25,14 @@
             <a href="/"><img src="./assets/logo-transparent-png.png" alt="QGenie Logo" class="h-12 w-auto"></a>
         </div>
     </nav>
-
+<noscript>
+    <div class="flex items-center justify-center">
+        <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative" role="alert">
+            <strong class="font-bold">Enable JavaScript!</strong>
+            <span class="block sm:inline">This website requires JavaScript to function properly. Please enable JavaScript in your browser settings.</span>
+        </div>
+    </div>
+</noscript>
     <main class="container mx-auto mt-8 px-8">
         <div class="flex flex-col items-center justify-center">
             <h2 class="text-2xl font-bold text-white mb-4">Generate an Exam-Style Question</h2>
