--- a/public/gen.html
+++ b/public/gen.html
@@ -79,6 +79,6 @@
         </div>
     </main>
 
-    <script src="./index.js" type="module"></script>
+    <script src="./index.js" type="module" crossorigin="use-credentials"></script>
 </body>
 </html>
