--- a/public/gen.html
+++ b/public/gen.html
@@ -30,59 +30,72 @@
                     <select id="prompt" name="prompt" class="appearance-none bg-transparent border-none w-full text-gray-700 mr-3 py-1 px-2 leading-tight focus:outline-none">
                         <option value="">Select a Prompt</option>
                         <optgroup label="A Level Edexcel Economics A: Introduction to Markets and Market Failure"></optgroup>
-                        <option value="1">The Economic Problem</option>
-                        <option value="1">Allocation of Resources</option>
-                        <option value ="1">Demand
-                        <option value="1">Supply</option>
-                        <option value="1">Elasticity</option>
-                        <option value="1"> Market Equilibrium</option>
-                        <option value="1">Indirect Taxes and Subsidies</option>
-                        <option value="1">Price Controls: Minimum and Maximum Prices</option>
-                        <option value="1">Market Failure and Externalities</option>   
-                        <option value="1">Public Goods and Quasi-Public Goods</option>
-                        <option value="1"> Common access resources</option>
-                        <option value="1">Information asymmetry and market failure</option>
+                            <option value="1">The Economic Problem</option>
+                            <option value="1">Allocation of Resources</option>
+                            <option value ="1">Demand
+                            <option value="1">Supply</option>
+                            <option value="1">Elasticity</option>
+                            <option value="1"> Market Equilibrium</option>
+                            <option value="1">Indirect Taxes and Subsidies</option>
+                            <option value="1">Price Controls: Minimum and Maximum Prices</option>
+                            <option value="1">Market Failure and Externalities</option>   
+                            <option value="1">Public Goods and Quasi-Public Goods</option>
+                            <option value="1"> Common access resources</option>
+                            <option value="1">Information asymmetry and market failure</option>
                         <optgroup label="Edexcel A Level Economics A: The UK Economy - Performance and Policies"></optgroup>
-                        <option value="2">Measures of Economic Performance</option>
-                        <option value="2">Aggregate Demand</option>
-                        <option value="2">Aggregate Supply</option>
-                        <option value="2">National Income and Economic Welfare</option>
-                        <option value="2">Economic Growth</option>
-                        <option value="2">Inflation</option>
-                        <option value="2">Unemployment</option>
-                        <option value="2">Balance of Payments</option>
-                        <option value="2">Macroeconomic Objectives and Policy</option>
-                        <option value="2">Conflicts and Trade Offs</option>
+                            <option value="2">Measures of Economic Performance</option>
+                            <option value="2">Aggregate Demand</option>
+                            <option value="2">Aggregate Supply</option>
+                            <option value="2">National Income and Economic Welfare</option>
+                            <option value="2">Economic Growth</option>
+                            <option value="2">Inflation</option>
+                            <option value="2">Unemployment</option>
+                            <option value="2">Balance of Payments</option>
+                            <option value="2">Macroeconomic Objectives and Policy</option>
+                            <option value="2">Conflicts and Trade Offs</option>
                         <optgroup label="AQA A Level History: Tsarist and Communist Russia, 1855-1964"></optgroup>
-                        <option value="3">Political, Social and Economic Condition of Russia in 1855</option>
-                        <option value="3">The Impact of the Crimean War</option>
-                        <option value="3">The Emancipation of he Serfs</option>
-                        <option value="3">Alexander II and III as rulers</option>
-                        <option value="3">Russification & Treatment of Ethnic Minorities</option>
-                        <option value="3">Opposition: Liberals, Radicals and the Tsarist Reaction</option>
-                        <option value="3">Industrial Developments and the Land Issue</option>
-                        <option value="3">Nicholas II as ruler</option>
-                        <option value="3">1905 Revolution</option>
-                        <option value="3">Duma Government</option>
-                        <option value="3">Economic and Social Developments up to 1914</option>
-                        <option value="3">Marxism, Socialism and Liberalism</option>
-                        <option value="3">Political, Economic and Social Problems of Wartime</option>
-                        <option value="3">The Collapse of Autocracy</option>
-                        <option value="3">The Provisional Government</option>
-                        <option value="3">The Bolsheviks</option>
+                            <option value="3">Political, Social and Economic Condition of Russia in 1855</option>
+                            <option value="3">The Impact of the Crimean War</option>
+                            <option value="3">The Emancipation of he Serfs</option>
+                            <option value="3">Alexander II and III as rulers</option>
+                            <option value="3">Russification & Treatment of Ethnic Minorities</option>
+                            <option value="3">Opposition: Liberals, Radicals and the Tsarist Reaction</option>
+                            <option value="3">Industrial Developments and the Land Issue</option>
+                            <option value="3">Nicholas II as ruler</option>
+                            <option value="3">1905 Revolution</option>
+                            <option value="3">Duma Government</option>
+                            <option value="3">Economic and Social Developments up to 1914</option>
+                            <option value="3">Marxism, Socialism and Liberalism</option>
+                            <option value="3">Political, Economic and Social Problems of Wartime</option>
+                            <option value="3">The Collapse of Autocracy</option>
+                            <option value="3">The Provisional Government</option>
+                            <option value="3">The Bolsheviks</option>
                         <optgroup label="AQA A Level History: The English Revolution, 1625-1642"></optgroup>
-                        <option value="4">The Legacy of James I</option>
-                        <option value="4">Monarchy and Divine Right</option>
-                        <option value="4">Challenges to the arbitrary government of Charles I</option>
-                        <option value="4">Parlimentary Radicalism</option>
-                        <option value="4">Charles I's Personal Rule</option>
-                        <option value="4">Religious Issues</option>
-                        <option value="4">Political Issues</option>
-                        <option value="4">Radicalism, dissent and the approach of war</option>
-                        <option value="4">The Political Nation, 1640</option>
-                        <option value="4"> John Pym and the spread of parliamentary radicalism</option>
-                        <option value="4">Conflicts between the Crown and Parliament</option>
-                        <option value="4">The "slide" into war</option>
+                            <option value="4">The Legacy of James I</option>
+                            <option value="4">Monarchy and Divine Right</option>
+                            <option value="4">Challenges to the arbitrary government of Charles I</option>
+                            <option value="4">Parlimentary Radicalism</option>
+                            <option value="4">Charles I's Personal Rule</option>
+                            <option value="4">Religious Issues</option>
+                            <option value="4">Political Issues</option>
+                            <option value="4">Radicalism, dissent and the approach of war</option>
+                            <option value="4">The Political Nation, 1640</option>
+                            <option value="4">John Pym and the spread of parliamentary radicalism</option>
+                            <option value="4">Conflicts between the Crown and Parliament</option>
+                            <option value="4">The "slide" into war</option>
+                            </optgroup>
+                        <optgroup label="Edexcel A Level Mathematics: Year 1 Stats and Mechanics">
+                            <option value="5">Data Collection</option>
+                            <option value="5">Measures of Location and Spread</option>
+                            <option value="5">Representations of Data</option>
+                            <option value="5">Correlation</option>
+                            <option value="5">Statistical Distributions</option>
+                            <option value="5">Hypothesis Testing</option>
+                            <option value="5">Modelling in Mechanics</option>
+                            <option value="5">Constant Acceleration</option>
+                            <option value="5">Forces and Motion</option>
+                            <option value="5">Variable Acceleration</option>
+                        </optgroup>
                         <optgroup label="Edexcel A Level Government and Politics: UK Government"></optgroup>
                         <optgroup label="Edexcel A Level Government and Politics: UK Politics"></optgroup>
                     </select>
@@ -95,7 +108,23 @@
             </div>
         </div>
     </main>
-
+       <!-- Linking to CDN -->
+       <script id="MathJax-script" async src=
+       "https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+           </script>
+         
+           <!-- Configuration of math jax -->
+           <script>
+               MathJax = {
+                   tex: {
+                       inlineMath: [['$', '$'], 
+                                   ['\\(', '\\)']]
+                   },
+                   svg: {
+                       fontCache: 'global'
+                   }
+               };
+           </script>
     <script src="./index.js"></script>
 </body>
 </html>
