--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
       </div>
 
       <!-- Heading -->
-      <h1 class="text-4xl md:text-8xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-yellow-300 via-yellow-500 to-pink-500 text-center mt-8">
+      <h1 class="text-4xl md:text-8xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-yellow-300 via-yellow-500 to-pink-500 text-center mt-8 pb-4">
         QGenie - Your <span
         class="txt-rotate"
         data-period="1000"
