--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>QGenie - Your personal exam question generator</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.4/dist/tailwind.min.css">
     <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
-    <link rel="icon" href="./assets/favicon.ico" />
+    <link rel="icon" href="./assets/new/QTP.svg" />
   </head>
   <body class="bg-gray-900">
     <div class="container mx-auto px-4 py-8">
