Pricing Styling Changes

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.4/dist/tailwind.min.css">
     <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
     <link rel="icon" href="./assets/new/QTP.svg" />
+    <link rel="stylesheet" href="./home.css">
   </head>
   <body class="bg-gray-900">
     <div class="container mx-auto px-4 py-8">
@@ -16,7 +17,6 @@
         <a href="#"><img src="./assets/new/QTP.svg" alt="QGenie logo" class="h-20 w-48" />
         <img src="./assets/new/GenieYellow.svg" alt="QGenie logo" class="h-20 w-48"/></a>
       </div>
-
       <!-- Heading -->
       <h1 class="text-4xl md:text-8xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-yellow-300 via-yellow-500 to-pink-500 text-center mt-8 pb-4">
         QGenie - Your <span
@@ -163,37 +163,76 @@
               <h3 class="text-xl font-bold text-gray-800 mb-4">Basic</h3>
               <p class="text-gray-800 mb-4">Free</p>
               <ul class="text-gray-800">
-                <li>Access to all subjects and topics</li>
-                <li>Access to 5 generations per hour</li>
+                <li>
+                  <img class="check" src="./assets/check.svg" style="display: inline-block;"> 
+                  <span class="text">Access to all subjects and topics</span>
+                </li>
+                <li>
+                  <img class="check" src="./assets/check.svg" style="display: inline-block;"> 
+                  <span class="text">Access to 5 generations per hour</span>
+                </li>
+                <li>
+                  <img class="check" src="./assets/cross.svg" style="display: inline-block;">
+                  <span class="text">Ability to save questions</span>
+                </li>
+                <li>
+                  <img class="check" src="./assets/cross.svg" style="display: inline-block;">
+                  <span class="text">Access to model answers</span>
+                </li>
               </ul>
             </div>
           </div>
+        </div>
+        <br>
 
           <div class="flex-1 mb-8 md:mb-0 md:mr-8">
             <div class="bg-white p-8 rounded-lg shadow">
               <h3 class="text-xl font-bold text-gray-800 mb-4">Pro</h3>
               <p class="text-gray-800 mb-4">£9.99/month</p>
               <ul class="text-gray-800">
-                <li>Access to all subjects and topics</li>
-                <li>Ability to save questions</li>
-                <li>Access to 10 generations per hour</li>
+                <li>
+                  <img class="check" src="./assets/check.svg" style="display: inline-block;"> 
+                 <span class="text">Access to all subjects and topics</span> 
+                </li>
+                <li>
+                  <img class="check" src="./assets/check.svg" style="display: inline-block;">
+                  <span class="text">Ability to save questions</span>
+                </li>
+                <li>
+                  <img class="check" src="./assets/check.svg" style="display: inline-block;">
+                  <span>Access to 10 generations per hour</span>
+                </li>
+                <li>
+                  <img class="check" src="./assets/cross.svg" style="display: inline-block;">
+                  <span class="text">Access to model answers</span>
+                </li>
               </ul>
             </div>
           </div>
-
-          <div class="flex-1">
+          <br>
+          <div class="flex-1 mb-8 md:mb-0 md:mr-8">
             <div class="bg-white p-8 rounded-lg shadow">
               <h3 class="text-xl font-bold text-gray-800 mb-4">Premium</h3>
               <p class="text-gray-800 mb-4">£19.99/month</p>
               <ul class="text-gray-800">
-                <li>Access to all subjects and topics</li>
-                <li>Ability to save questions</li>
-                <li>Unlimited generations per hour</li>
+                <li>
+                  <img class="check" src="./assets/check.svg" style="display: inline-block;">
+                  <span class="text">Access to all subjects and topics</span>
+                </li>
+                <li><img class="check" src="./assets/check.svg" style="display: inline-block;">
+                  <span class="text">Ability to save questions</span></li>
+                <li>
+                  <img class="check" src="./assets/check.svg" style="display: inline-block;">
+                  <span class="text">
+                  Unlimited generations per hour</span></li>
+                <li>
+                  <img class="check" src="./assets/check.svg" style="display: inline-block;">
+                  <span class="text">Access to model answers</span>
+                </li>
               </ul>
             </div>
           </div>
         </div>
-      </div>
 
       <!-- FAQ -->
       <div class="mt-16">
